Fixed: number going behind gradient

--- a/src/block/number-box/editor.scss
+++ b/src/block/number-box/editor.scss
@@ -13,10 +13,10 @@
 	}
 	// Ensure the number is behind.
 	.ugb-number-box__item > * {
-		z-index: 2;
+		z-index: 3;
 	}
 	.ugb-number-box__item > *:first-child {
-		z-index: 1;
+		z-index: 4;
 	}
 }
 
